# daily-report-bot

./: pyproject.toml  run.py
app/: callback_dates.py  charts.py  filters.py  keyboards.py  loggers.py  states.py  text_config.py  text_data.json  types.py  utils.py
app/database/: db_service.py  requests.py
app/entities/: goal.py  report.py  user.py
app/routers/: chat_router.py  daily_report_setting_router.py  goals_setting_router.py  main_router.py
app/services/: db_service.py
